--- a/vignettes/awesome_table_in_html.Rmd
+++ b/vignettes/awesome_table_in_html.Rmd
@@ -235,7 +235,7 @@ tbl_img %>%
     c("kableExtra_sm.png", "kableExtra_sm.png"), 50, 50))
 ```
 
-`kableExtra` also provides a few inline plotting tools. Right now, there are `spec_hist`, `spec_boxplot`, and `spec_plot`. One key feature is that by default, the limits of every subplots are fixed so you can compare across rows. Note that in html, you can also use package `sparkline` to create some jquery based interactive sparklines. Check out the end of this guide for details.
+`kableExtra` also provides a few inline plotting tools. Right now, there are `spec_hist`, `spec_boxplot`, and `spec_plot`. One key feature is that by default, the limits of every subplots are fixed so you can compare across rows. Note that in html, you can also use package `g` to create some jquery based interactive sparklines. Check out the end of this guide for details.
 
 ```{r}
 mpg_list <- split(mtcars$mpg, mtcars$cyl)
@@ -634,13 +634,13 @@ Well, this is not a feature but rather a documentation of how to use the `sparkl
 ```{r}
 # Not evaluated
 library(sparkline)
-sparkline(0)
+sparkline::sparkline(0)
 ```
 
 ```{r}
 spk_dt <- data.frame(
   var = c("mpg", "wt"),
-  sparkline = c(spk_chr(mtcars$mpg), spk_chr(mtcars$wt))
+  sparkline = c(sparkline::spk_chr(mtcars$mpg), sparkline::spk_chr(mtcars$wt))
 )
 
 kbl(spk_dt, escape = F) %>%
