full_width works with with

--- a/inst/rmarkdown/test_column_spec.Rmd
+++ b/inst/rmarkdown/test_column_spec.Rmd
@@ -17,3 +17,10 @@ kbl(df, format = "latex") |>
         border_right = TRUE
         )
 ```
+
+```{r}
+dt <- mtcars[1:5, 1:6]
+kbl(dt, format = "latex", booktabs = TRUE) %>%
+  kable_styling(full_width = TRUE) %>%
+  column_spec(1, width = "8cm")
+```
